z-index fixes for drag handles

--- a/views/shared/css/neatline-editor.css
+++ b/views/shared/css/neatline-editor.css
@@ -753,7 +753,7 @@ table#items-table tr.hidden {
     border-left: 1px solid #745982;
     border-right: 1px solid #745982;
     border-bottom: 1px solid #745982;
-    z-index: 100;
+    z-index: 1000;
 }
 
 .dropdown-content button {
